k8s/apps/recipes-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes-api
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipes-api
  template:
    metadata:
      labels:
        app: recipes-api
    spec:
      containers:
        - name: api
          image: tugy/recipes-api:sha-af78cb6
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
