k8s/apps/recipes-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipes-api
  namespace: apps
spec:
  selector:
    app: recipes-api
  ports:
    - port: 80
      targetPort: 80
