k8s/apps/recipes-api/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: recipes-api
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: recipes-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: recipes
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mongo
      ports:
        - port: 27017
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - port: 6379
          protocol: TCP
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - ports:
        - port: 443
          protocol: TCP
